--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
         <div class="carousel-inner">
           <div id="img1" class="carousel-item active bg-dark">
-            <img src="/imgs/ship-123.jpg" class="d-block w-100" alt="...">
+            <img src="imgs/ship-123.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>¿ERES EXPORTADOR?</h5>
               <p>¡Solicita Drawback!</p>
@@ -63,7 +63,7 @@
             </div>
           </div>
           <div id="img2" class="carousel-item">
-            <img src="/imgs/port-1845350_1920.jpg" class="d-block w-100" alt="...">
+            <img src="imgs/port-1845350_1920.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>¿QUIERES IMPORTAR O EXPORTAR?</h5>
               <p>Comunicate con nuestros asesores.</p>
@@ -71,7 +71,7 @@
             </div>
           </div>
           <div id="img3" class="carousel-item">
-            <img src="/imgs/port-675539_1920.jpg" class="d-block w-100" alt="...">
+            <img src="imgs/port-675539_1920.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>¿NO SABES QUE IMPORTAR O EXPORTAR?</h5>
               <p>Podemos absolver sus consultas.</p>
@@ -118,7 +118,7 @@
 
           <article class="col-xs-12 col-sm-12 col-md-6 col-xl-4">
             <figure class="text-center ">
-                <img src="/imgs/icons/iconmonstr-friend-5-64.png" alt="">
+                <img src="imgs/icons/iconmonstr-friend-5-64.png" alt="">
                 <figcaption>
                     <p>
                         <strong class="mb-2">Conocenos</strong>
@@ -131,7 +131,7 @@
         </article>
         <article class="col-xs-12 col-sm-12 col-md-6 col-xl-4">
             <figure class="text-center">
-                <img src="/imgs/icons/iconmonstr-clipboard-1-64.png" alt="">
+                <img src="imgs/icons/iconmonstr-clipboard-1-64.png" alt="">
                 <figcaption>
                   <div>
                     <p>
@@ -146,7 +146,7 @@
         </article>
         <article class="col-xs-12 col-sm-12 col-md-6 col-xl-4">
           <figure class="text-center">
-              <img src="/imgs/icons/iconmonstr-target-1-64.png" alt="">
+              <img src="imgs/icons/iconmonstr-target-1-64.png" alt="">
               <figcaption>
                   <p>
                       <strong class="mb-2">Apunta al exito</strong>
@@ -176,7 +176,7 @@
         <div class="row acerca-de justify-content-around">
             <article class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
                 <figure class="text-center">
-                    <img src="/imgs/icons/iconmonstr-bank-1-64.png" alt="">
+                    <img src="imgs/icons/iconmonstr-bank-1-64.png" alt="">
                     <figcaption>
                         <p>
                             <strong class="mb-2">Recuperacion de Drawback</strong>
@@ -189,7 +189,7 @@
             </article>
             <article class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
                 <figure class="text-center">
-                    <img src="/imgs/icons/iconmonstr-handshake-1-64.png" alt="">
+                    <img src="imgs/icons/iconmonstr-handshake-1-64.png" alt="">
                     <figcaption>
                         <p>
                             <strong class="mb-2">Gestion Aduanera</strong>
@@ -203,7 +203,7 @@
 
             <article class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
                 <figure class="text-center">
-                    <img src="/imgs/icons/iconmonstr-delivery-12-64.png" alt="">
+                    <img src="imgs/icons/iconmonstr-delivery-12-64.png" alt="">
                     <figcaption>
                         <p>
                             <strong class="mb-2">Compras Extranjeras</strong>
@@ -216,7 +216,7 @@
             </article>
             <article class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
               <figure class="text-center">
-                  <img src="/imgs/icons/iconmonstr-idea-8-64.png" alt="">
+                  <img src="imgs/icons/iconmonstr-idea-8-64.png" alt="">
                   <figcaption>
                       <p>
                           <strong class="mb-2">Inteligencia Comercial</strong>
@@ -250,9 +250,9 @@
           <div id="redessociales" class="col-xs-12 col-sm-12 col-md-6 col-xl-6">
             <h4>Redes Sociales:</h4>
             <br>
-            <a href="#"><img src="/imgs/icons/facebook.png" alt=""></a>
-            <a href="#"><img src="/imgs/icons/twitter.png" alt=""></a>
-            <a href="#"><img src="/imgs/icons/instagram-new.png" alt=""></a>
+            <a href="#"><img src="imgs/icons/facebook.png" alt=""></a>
+            <a href="#"><img src="imgs/icons/twitter.png" alt=""></a>
+            <a href="#"><img src="imgs/icons/instagram-new.png" alt=""></a>
 
         </div>
           
